Fix double scroll when announcements appear

--- a/app/styles/components/_environment-banner.scss
+++ b/app/styles/components/_environment-banner.scss
@@ -14,6 +14,22 @@ $au-env-element-height: 4rem;
   left: 0; 
   width: 100%;
 }
+
+/* Announcement
+  ========================================================================== */
+
+.au-c-env-announcement {
+  padding: 0.5rem 2.5rem;
+  height: calc(1.5 * $au-env-element-height);
+  + .au-c-main-container {
+    height: calc(100vh - (4 * $au-env-element-height));
+  }
+  @include mq($from:medium) {
+    + .au-c-main-container {
+      height: calc(100vh - (2.5 * $au-env-element-height));
+    }
+  }
+}
    
 /* Component
   ========================================================================== */
@@ -21,7 +37,7 @@ $au-env-element-height: 4rem;
 .au-c-app--environment {
   position: relative;
   overflow-y: auto;
-  .au-c-alert {
+  .au-c-alert:not(.au-c-env-announcement) {
     @extend %full-fixed-to-left;
     height: calc(3.5 * $au-env-element-height);
     top: 0;
@@ -38,13 +54,23 @@ $au-env-element-height: 4rem;
     .au-c-brand__logo, .au-c-brand__logotype {
       max-height: $au-env-element-height !important;
     }
+    .au-c-main-header__title {
+      overflow: visible;
+    }
   }
   .au-c-main-container {
     height: calc(100vh - (4.5 * $au-env-element-height));
     margin-top: calc(4.5 * $au-env-element-height);
   }
+  .au-c-env-announcement {
+    margin-top: calc(4.5 * $au-env-element-height);
+    + .au-c-main-container {
+      height: calc(100vh - (4 * $au-env-element-height)) !important;
+      margin-top: 0 !important;
+    }
+  }
   @include mq($from:xsmall) {
-    .au-c-alert {
+    .au-c-alert:not(.au-c-env-announcement) {
       height: calc(3.5 * $au-env-element-height);
     }
     .au-c-main-header {
@@ -56,7 +82,7 @@ $au-env-element-height: 4rem;
     }
   }
   @include mq($from:small) {
-    .au-c-alert {
+    .au-c-alert:not(.au-c-env-announcement) {
       height: calc(2.5 * $au-env-element-height);
     }
     .au-c-main-header {
@@ -66,9 +92,15 @@ $au-env-element-height: 4rem;
       height: calc(100vh - (3.5 * $au-env-element-height));
       margin-top: calc(3.5 * $au-env-element-height);
     }
+    .au-c-env-announcement {
+      margin-top: calc(3.5 * $au-env-element-height);
+      + .au-c-main-container {
+        height: calc(100vh - (3 * $au-env-element-height)) !important;
+      }
+    }
   }
   @include mq($from:medium) {
-    .au-c-alert {
+    .au-c-alert:not(.au-c-env-announcement) {
       height: calc(1.5 * $au-env-element-height);
       .au-c-alert__message {
         div {
@@ -83,16 +115,22 @@ $au-env-element-height: 4rem;
       height: calc(100vh - (2.5 * $au-env-element-height));
       margin-top: calc(2.5 * $au-env-element-height);
     }
+    .au-c-env-announcement {
+      margin-top: calc(2.5 * $au-env-element-height);
+      + .au-c-main-container {
+        height: calc(100vh - (4 * $au-env-element-height)) !important;
+      }
+    }
   }
 }
    
-.au-c-environment--development > .au-c-alert--warning {
+.au-c-environment--development > .au-c-alert:not(.au-c-env-announcement) {
   background-color: $au-environment-dev-color;
   border-color: darken($au-environment-dev-color, 7%);
   color: $au-white;
 }
 
-.au-c-environment--test > .au-c-alert--warning {
+.au-c-environment--test > .au-c-alert:not(.au-c-env-announcement) {
   background-color: $au-environment-test-color;
   border-color: darken($au-environment-test-color, 30%);
   color: $au-gray-1000;
